test/should_fail/TestReservedWord3.oj

function test() {
	var $oj_foo;
}
